--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@ h1 {
   transition: transform 0.3s ease, font-family 0.1s ease;
   position: relative;
   color: #000000;
+  -webkit-text-stroke: 1px rgba(0,0,0,0.7);
   text-shadow:
-    0 0 4px rgba(0,0,0,0.2),
-    0 0 8px rgba(0,0,0,0.15);
+    0 0 4px rgba(0,0,0,0.4),
+    0 0 8px rgba(0,0,0,0.3),
+    0 0 12px rgba(0,0,0,0.2);
   animation: pulseFont 5s ease-in-out infinite;
 }
 
@@ -47,10 +49,10 @@ h1 {
   position: absolute;
   width: 5px;
   height: 5px;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0,0,0,0.2);
   border-radius: 50%;
   pointer-events: none;
-  opacity: 0.6;
+  opacity: 0.5;
   mix-blend-mode: multiply;
   animation: float 1.5s linear forwards;
 }
@@ -83,9 +85,9 @@ h1 {
   position: fixed;
   left: 1vw;
   bottom: 1vw;
-  font-size: 18px;
+  font-size: 20px;
   font-family: 'Courier New', monospace;
-  color: rgba(0,0,0,0.7);
+  color: rgba(0,0,0,0.8);
   z-index: 5;
   user-select: none;
 }
