--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ muteButton.addEventListener('click',()=>{
   else { player.unMute(); muteIcon.innerHTML='<path d="M3 10v4h4l5 5V5L7 10H3zm13.5 2c0-1.77-1.02-3.29-2.5-4.03v8.06c1.48-.74 2.5-2.26 2.5-4.03z"/>'; }
 });
 
-// Tanggal & waktu HH:MM
+// Tanggal & waktu HH:MM:SS
 const datetimeEl = document.getElementById('datetime');
 function updateDateTime() {
   const now = new Date();
@@ -170,7 +170,8 @@ function updateDateTime() {
   const dd = String(now.getDate()).padStart(2, '0');
   const hh = String(now.getHours()).padStart(2,'0');
   const mins = String(now.getMinutes()).padStart(2,'0');
-  datetimeEl.textContent = `${yy}//${mm}//${dd}  ${hh}:${mins}`;
+  const ss = String(now.getSeconds()).padStart(2,'0');
+  datetimeEl.textContent = `${yy}//${mm}//${dd}  ${hh}:${mins}:${ss}`;
 }
 setInterval(updateDateTime, 1000);
 updateDateTime();
