--- a/kulam-mailgen/index.html
+++ b/kulam-mailgen/index.html
@@ -1,25 +1,188 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kulam Random Email Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
-  <script type="importmap">
+    <!-- Babel for compiling JSX in the browser -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <!-- Import map for React and ReactDOM -->
+    <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
-</head>
+  </head>
   <body class="bg-slate-900 text-white">
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+
+    <script type="text/babel" data-type="module">
+      import React, { useState, useCallback, useRef, useEffect } from 'react';
+      import ReactDOM from 'react-dom/client';
+
+      // --- Icon Components ---
+      const CopyIcon = (props) => (
+        <svg
+          {...props}
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          strokeWidth="2"
+          strokeLinecap="round"
+          strokeLinejoin="round"
+        >
+          <rect width="14" height="14" x="8" y="8" rx="2" ry="2" />
+          <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2" />
+        </svg>
+      );
+
+      const RefreshCwIcon = (props) => (
+        <svg
+          {...props}
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          strokeWidth="2"
+          strokeLinecap="round"
+          strokeLinejoin="round"
+        >
+          <path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8" />
+          <path d="M21 3v5h-5" />
+          <path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16" />
+          <path d="M3 21v-5h5" />
+        </svg>
+      );
+
+      const CheckIcon = (props) => (
+        <svg
+          {...props}
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          strokeWidth="2"
+          strokeLinecap="round"
+          strokeLinejoin="round"
+        >
+          <path d="M20 6 9 17l-5-5" />
+        </svg>
+      );
+
+      // --- Main App Component ---
+      const App = () => {
+        const [email, setEmail] = useState('Click "Generate"');
+        const [isCopied, setIsCopied] = useState(false);
+        const generatedNames = useRef(new Set());
+
+        const generateEmail = useCallback(() => {
+          const randomName = (length) => {
+            const chars = "abcdefghijklmnopqrstuvwxyz0123456789";
+            let name = "";
+            for (let i = 0; i < length; i++) {
+              name += chars.charAt(Math.floor(Math.random() * chars.length));
+            }
+            return name;
+          };
+
+          let name;
+          do {
+            const len = Math.floor(Math.random() * 7) + 4; // length 4–10 for better variety
+            name = randomName(len);
+          } while (generatedNames.current.has(name));
+
+          generatedNames.current.add(name);
+          setEmail(`${name}@kulam.my.id`);
+          setIsCopied(false);
+        }, []);
+
+        const copyToClipboard = useCallback(() => {
+          if (email !== 'Click "Generate"') {
+            navigator.clipboard.writeText(email).then(() => {
+              setIsCopied(true);
+              setTimeout(() => {
+                setIsCopied(false);
+              }, 2000);
+            });
+          }
+        }, [email]);
+
+        useEffect(() => {
+          // Generate an email on initial load
+          generateEmail();
+        }, []);
+
+        return (
+          <div className="min-h-screen flex flex-col items-center justify-center bg-slate-900 text-gray-100 p-4 font-sans">
+            <div className="w-full max-w-md mx-auto bg-slate-800/60 rounded-2xl shadow-2xl shadow-cyan-500/10 backdrop-blur-sm border border-slate-700">
+              <div className="p-8 text-center">
+                <h1 className="text-3xl sm:text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500 mb-4">
+                  Kulam MailGen
+                </h1>
+                <p className="text-slate-400 mb-8">
+                  Your instant, disposable email generator.
+                </p>
+
+                <div
+                  className="group relative flex items-center justify-between bg-slate-900/50 border border-slate-700 rounded-lg p-4 mb-6 cursor-pointer transition-all duration-300 hover:border-cyan-400 hover:bg-slate-800"
+                  onClick={copyToClipboard}
+                >
+                  <span className="text-lg sm:text-xl font-mono text-cyan-300 break-all pr-10">
+                    {email}
+                  </span>
+                  <div className="absolute right-4 top-1/2 -translate-y-1/2">
+                    {isCopied ? (
+                      <CheckIcon className="w-6 h-6 text-green-400" />
+                    ) : (
+                      <CopyIcon className="w-6 h-6 text-slate-400 transition-colors duration-300 group-hover:text-cyan-400" />
+                    )}
+                  </div>
+                </div>
+
+                <button
+                  onClick={generateEmail}
+                  className="w-full flex items-center justify-center gap-2 bg-gradient-to-r from-cyan-500 to-blue-600 text-white font-semibold py-3 px-6 rounded-lg shadow-lg shadow-cyan-500/20 hover:from-cyan-600 hover:to-blue-700 focus:outline-none focus:ring-4 focus:ring-cyan-500/50 transform transition-transform duration-200 hover:scale-105 active:scale-95"
+                >
+                  <RefreshCwIcon className="w-5 h-5" />
+                  <span>Generate New Email</span>
+                </button>
+              </div>
+            </div>
+
+            {isCopied && (
+              <div className="fixed bottom-5 left-1/2 -translate-x-1/2 bg-green-500 text-white py-2 px-6 rounded-full shadow-lg animate-bounce">
+                Copied to clipboard!
+              </div>
+            )}
+
+            <footer className="absolute bottom-4 text-slate-500 text-sm">
+              <p>UI enhanced for Kulam.my.id</p>
+            </footer>
+          </div>
+        );
+      };
+
+      // --- Mount the App ---
+      const rootElement = document.getElementById('root');
+      if (!rootElement) {
+        throw new Error("Could not find root element to mount to");
+      }
+      const root = ReactDOM.createRoot(rootElement);
+      root.render(<App />);
+
+    </script>
+  </body>
 </html>
