--- a/test/index.html
+++ b/test/index.html
@@ -20,13 +20,14 @@ body {
   position: relative;
 }
 
-/* canvas smoke di belakang */
+/* canvas smoke di depan */
 #fluid-canvas {
   position: fixed;
   top:0; left:0;
   width:100%;
   height:100%;
-  z-index: -1;
+  z-index: 2; /* di atas background */
+  pointer-events: none; /* biar interaksi mouse tembus */
 }
 
 h1 {
@@ -36,11 +37,10 @@ h1 {
   letter-spacing: 6px;
   cursor: default;
   transition: transform 0.3s ease, font-family 0.1s ease;
-  position: relative;
   color: #ffffff; /* putih */
   text-shadow: 0 0 10px rgba(255,255,255,0.4);
   animation: pulseFont 5s ease-in-out infinite;
-  z-index: 1;
+  z-index: 3;
 }
 @keyframes pulseFont {
   0%,100% { transform: scale(1); }
@@ -65,7 +65,7 @@ h1 {
   align-items: center;
   cursor: pointer;
   transition: background 0.3s, transform 0.2s;
-  z-index: 5;
+  z-index: 3;
 }
 #muteButton:hover { background: rgba(255,255,255,0.1); transform: scale(1.1);}
 #muteButton svg { width:50%; height:50%; fill:white;}
@@ -77,7 +77,7 @@ h1 {
   font-size: 20px;
   font-family: 'Courier New', monospace;
   color: rgba(255,255,255,0.8);
-  z-index: 5;
+  z-index: 3;
   user-select: none;
 }
 </style>
